estilo del titulo en los componentes

--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -1,5 +1,13 @@
 <section>
-    <h2 class="title">{{ 'Our_Products'|translate }}</h2>
+    <div class="title_Bloque">
+        <div class="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none" stroke="#e89002"
+                    stroke-linecap="round" stroke-width="10"></line>
+            </svg>
+        </div>
+        <h1 class="title">{{ 'Our_Products'|translate }}</h1>
+    </div>
     <div class="container">
         <div class="flex-container-row">
 
@@ -75,7 +83,7 @@
                 </div>
             </div>
 
-            
+
             <div class="product-card">
                 <div class="product-image">
                     <img src="./assets/img/pexels-esrannuur-129682465-24288881.jpg" alt="">
