--- a/src/app/functionalities/registration/registration.component.html
+++ b/src/app/functionalities/registration/registration.component.html
@@ -24,7 +24,15 @@
 
     <section class="flex-container">
         <div class="flex-container-col">
-            <h2 class="title"> Whatsapp</h2>
+            <div class="title_Bloque">
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+                <h3 class="title">Whatsapp</h3>
+            </div>
             <p>Háblanos por Whatsapp y reserva ya el curso</p>
             <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                 routerLink="/registration">
@@ -32,7 +40,16 @@
             </button>
         </div>
         <div class="flex-container-col">
-            <h2 class="title"> Teléfono</h2>
+
+            <div class="title_Bloque">
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+                <h3 class="title">Teléfono</h3>
+            </div>
             <p>Llámanos y reserva tu curso</p>
             <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                 routerLink="/registration">
@@ -40,7 +57,16 @@
             </button>
         </div>
         <div class="flex-container-col">
-            <h2 class="title"> Correo electrónico</h2>
+
+            <div class="title_Bloque">
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+                <h3 class="title"> Correo electrónico</h3>
+            </div>
             <p>Envíanos un correo electrónico con el curso elegido</p>
             <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
                 routerLink="/registration">
