--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,26 +9,45 @@
   <app-activities></app-activities>
 </section>
 
-<h1 class="title">
-  {{'Honeys'|translate}}
-</h1>
+
+<div class="title_Bloque">
+  <div class="">
+    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+      <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none" stroke="#e89002"
+        stroke-linecap="round" stroke-width="10"></line>
+    </svg>
+  </div>
+  <h1 class="title">{{'Honeys'|translate}}</h1>
+</div>
 <section class="results">
   <app-housing-location *ngFor="let housingLocation of filteredLocationList" [housingLocation]="housingLocation">
   </app-housing-location>
 </section>
 
-
-
-<h1 class="title">
-  {{'Material.Title'|translate}}</h1>
+<div class="title_Bloque">
+  <div class="">
+    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+      <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none" stroke="#e89002"
+        stroke-linecap="round" stroke-width="10"></line>
+    </svg>
+  </div>
+  <h1 class="title">{{'Material.Title'|translate}}</h1>
+</div>
 <section class="results">
   <app-material-honey *ngFor="let materialHoney of materialHoneyList"
     [materialHoney]="materialHoney"></app-material-honey>
 </section>
 
 
-<h1 class="title">
-  {{'Cours.Title'|translate}}</h1>
+<div class="title_Bloque">
+  <div class="">
+    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+      <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none" stroke="#e89002"
+        stroke-linecap="round" stroke-width="10"></line>
+    </svg>
+  </div>
+  <h1 class="title">{{'Cours.Title'|translate}}</h1>
+</div>
 <section class="results">
   <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
 </section>
