--- a/src/app/products/cours/cours.component.html
+++ b/src/app/products/cours/cours.component.html
@@ -3,13 +3,36 @@
         [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
         <div class="flex-container-col">
-            <h4 class="title"> A quién van dirigidos nuestros cursos</h4>
+           
+            <div class="title_Bloque">
+
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+    
+                <h2 class="">A quién van dirigidos nuestros cursos</h2>
+            </div>
             <p>En esta página podrás encontrar diferentes tipos de cursos relacionados con la apicultura y los productos
                 derivados de esta actividad, que van dirigidos a las personas:</p>
         </div>
     </div>
     <div>
-        <h5>Amantes de la naturaleza</h5>
+        
+        
+        <div class="title_Bloque">
+
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+
+            <h5 class="">Amantes de la naturaleza</h5>
+        </div>
         <p>Que les gusta el campo, la naturaleza en general y quieren conocer una nueva actividad que puede convertirse
             en un fantástico hoobie, para producir su propia miel, polen, etc.</p>
     </div>
@@ -39,7 +62,15 @@
     </section>
 
     <div>
-        <h4 class="title">{{'Cours.TitleTeam'|translate}}</h4>
+        <div class="title_Bloque">
+            <div class="">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none" stroke="#e89002"
+                  stroke-linecap="round" stroke-width="10"></line>
+              </svg>
+            </div>
+            <h1 class="title">{{'Cours.TitleTeam'|translate}}</h1>
+          </div>
         <p>{{'Cours.DescriptionCours'|translate}}</p>
     </div>
 
