--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -45,7 +45,17 @@
     </section>
 
     <section>
-        <h2 class="title"> {{'Cours.Other_Courses'|translate}}</h2>
+
+
+        <div class="title_Bloque">
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+            <h1 class="title">{{'Cours.Other_Courses'|translate}}</h1>
+        </div>
         <section class="results">
             <app-courses-honey *ngFor="let coursHoney of coursesHoneyList"
                 [coursHoney]="coursHoney"></app-courses-honey>
