--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -2,7 +2,16 @@
     <section>
         <div class="container"
             [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-            <h1 class="title"> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
+            <div class="title_Bloque">
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+                <h1 class="title">{{ 'Titles.Heart_Of_Nature' | translate}}</h1>
+            </div>
+
             <div class="flex-container">
                 <div class="flex-item newspaper-section background-image">
                     <p>{{ 'Home.Parraph' | translate}}</p>
@@ -15,7 +24,16 @@
         </div>
     </section>
     <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-        <h3 class="title">{{'About.whereAre.Title'|translate}}</h3>
+
+        <div class="title_Bloque">
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+            <h3 class="title">{{'About.whereAre.Title'|translate}}</h3>
+        </div>
         <div class="container">
             <div class="flex-container">
 
