--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,15 @@
 <section>
-    <h2 class="title">{{'Blog.Title'|translate}}</h2>
+
+    
+    <div class="title_Bloque">
+        <div class="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                    stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+            </svg>
+        </div>
+        <h3 class="title">{{'Blog.Title'|translate}}</h3>
+    </div>
     <div class="container">
         <div class="flex-container">
 
