--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -1,12 +1,26 @@
 <section>
     <div class="cart-list">
         <div class="flex-container cart-box">
-            <div class="image-container">
-                <img class="cart-img" [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}" />
-                <!-- Botón para cargar nueva imagen -->
-                <button (click)="fileInput.click()">Cargar nueva imagen</button>
-                <input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;" />
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}" alt="">
+                    <div class="titleCard">CARGAR IMAGEN</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>CARGAR IMAGEN</p>
+                    
+                    <button class="CartBtn honey-color"
+                        (click)="fileInput.click()">Cargar nueva imagen
+                    </button>
+                    <input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;" />
+                </div>
             </div>
+
+
+
+
             <div class="cart-item" *ngIf="housingLocation.type=== 'HN'">
                 <div class="cart-item-details">
                     {{ housingLocation.name }} -
