--- a/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/blog-herbal-honey.component.html
@@ -1,7 +1,7 @@
 <section class="flex-container">
 
    
-        <section class="flex-item background-image newspaper-section"
+        <section class="flex-item  newspaper-section"
             [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
             <div>
@@ -11,7 +11,7 @@
             </div>
 
         </section>
-        <section class="flex-item background-image">
+        <section class="flex-item newspaper-section">
             <app-benefit-herbal-honey></app-benefit-herbal-honey>
         </section>
   
