--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="flex-container">
-                <div class="flex-item newspaper-section background-image">
+                <div class="flex-item newspaper-section">
                     <p>{{ 'Home.Parraph' | translate}}</p>
                 </div>
                 <div class="flex-item newspaper-section">
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="flex-container">
 
-                <div class="flex-item newspaper-section background-image">
+                <div class="flex-item newspaper-section">
                     <p>
                         <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
                     </p>
