--- a/src/app/products/material-honey/material-honey.component.css
+++ b/src/app/products/material-honey/material-honey.component.css
@@ -4,3 +4,8 @@
     align-items: center;
     justify-content: space-evenly;
 }
+
+.image-container {
+    position: relative;
+    width: 100%;
+  }
