unifica el font family, limpieza de codigo y crear el fichero de estilos para el selector y la lista de resultados

--- a/src/app/functionalities/registration/registration.component.css
+++ b/src/app/functionalities/registration/registration.component.css
@@ -7,7 +7,7 @@
 }
 .effects-layer-title{
     color: var(--e-global-color-c785e97);
-    font-family: "Dosis", Sans-serif;
+    /* font-family: "Dosis", Sans-serif; */
     font-size: 80px;
     font-weight: 900;
 }
