--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -2,7 +2,7 @@
 
     <section class="flex-container">
         <div class="flex-container-col">
-            <section class="listing-description">
+            <section class="">
                 <h2 class="listing-heading">{{coursHoney?.title}}</h2>
 
                 <div class="title_Bloque">
