--- a/src/app/products/material-honey/details-material/details-material.component.html
+++ b/src/app/products/material-honey/details-material/details-material.component.html
@@ -13,7 +13,7 @@
         <div class="flex-container">
             <div class="flex-item">
                 <div class="flex-container-col">
-                    <section class="listing-description">
+                    <section class="">
                         <p class="listing-location">{{materialHoney?.ubication}}</p>
                         <p class="">{{'Price'|translate}}: {{materialHoney?.price | currency }}</p>
                         <ul>
