--- a/src/app/products/details/details.component.css
+++ b/src/app/products/details/details.component.css
@@ -1,49 +1,8 @@
-.listing-photo {
-  height: 600px;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 30px;
-  float: right;
-}
 
-.listing-heading {
-  font-size: 48pt;
-  font-weight: bold;
-  margin-bottom: 15px;
-}
-
-.listing-location::before {
-  content: url('/assets/location-pin.svg') / '';
-}
-
-.listing-location {
-  font-size: 24pt;
-  margin-bottom: 15px;
-}
-
-.listing-features > .section-heading {
-  color: var(--secondary-color);
-  font-size: 24pt;
-  margin-bottom: 15px;
-}
-
-.listing-features {
-  margin-bottom: 20px;
-}
-
-.listing-features li {
-  font-size: 14pt;
-}
 
 li {
   list-style-type: none;
 }
-
-.listing-apply .section-heading {
-  font-size: 18pt;
-  margin-bottom: 15px;
-}
-
 
 q::before,
 q::after {
@@ -83,3 +42,6 @@ q::after {
     height: 400px;
   }
 }
+
+
+/* ----------------------------------------------- */
