--- a/src/styles.css
+++ b/src/styles.css
@@ -132,13 +132,16 @@ strong {
 
 .discount {
   position: absolute;
-  top: 10px; /* Ajusta esta posición según sea necesario */
-  left: -20px; /* Ajusta esta posición según sea necesario */
+  top: 10px;
+  /* Ajusta esta posición según sea necesario */
+  left: -20px;
+  /* Ajusta esta posición según sea necesario */
   transform: rotate(-45deg);
   background-color: var(--global-color-title);
   font-weight: 700;
   color: white;
-  padding: 10px; /* Ajusta el tamaño del relleno según sea necesario */
+  padding: 10px;
+  /* Ajusta el tamaño del relleno según sea necesario */
   font-style: italic;
   z-index: 10;
 }
@@ -230,90 +233,10 @@ strong {
   justify-content: space-around;
 }
 
-.listing {
-  background: var(--honey-tree-color);
-  border-radius: 30px;
-  padding-bottom: 30px;
-}
-
-.listing-heading {
-  font-size: 13px;
-  font-family: cursive;
-  font-weight: 700;
-  color: var(--global-color-title);
-  padding: 10px 20px 0 20px;
-}
-
-.listing-photo {
-  cursor: pointer;
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 30px 30px 0 0;
-
-}
-
-
-.listing-location {
-  padding: 10px 20px 20px 20px;
-  font-size: 13px;
-  font-family: cursive;
-}
-
-.listing-location::before {
-  content: url("/assets/location-pin.svg") / "";
-}
 
 .background-image {
   background-image: url('/assets/img/pexels-lamiko-3616764.jpg');
 }
-
-section.listing a {
-  padding-left: 20px;
-  text-decoration: none;
-  color: var(--primary-color);
-  font-size: 13px;
-  font-family: cursive;
-}
-
-section.listing a::after {
-  content: "\203A";
-  margin-left: 5px;
-}
-
-
-/** #####################################################
-    #   MOSTAR DETALLES DEL PORDUCTO                    #
-    #####################################################*/
-
-.listing-details-photo {
-  height: 600px;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 30px;
-  float: right;
-}
-
-.listing-details-heading {
-  font-size: 48pt;
-  font-weight: bold;
-  margin-bottom: 15px;
-  color: var(--primary-color);
-  padding: 10px 20px 0 20px;
-}
-
-
-.listing-details-location {
-  font-size: 24pt;
-  margin-bottom: 15px;
-  padding: 10px 20px 20px 20px;
-}
-
-.listing-details-location::before {
-  content: url("/assets/location-pin.svg") / "";
-}
-
-
 
 /** #####################################################
     #   BOTTON ADD CART                                 #
