estilos del select

--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -34,7 +34,7 @@
                     <input class="input-name" type="text" [(ngModel)]="housingLocation.name">
                     <input class="input-quantity" type="number" [(ngModel)]="housingLocation.quantity">
                     <!-- <select class="input-weight styled-select" [(ngModel)]="housingLocation.weight"> -->
-                        <div class="form-inline">
+                        <div class="form-inline-select">
                             <label for="weightSelector">Peso: </label>
                             <div class="custom-select-wrapper">
                               <select id="weightSelector" [(ngModel)]="housingLocation.weight" class="form-control custom-select">
