--- a/src/app/products/material-honey/material-honey.component.html
+++ b/src/app/products/material-honey/material-honey.component.html
@@ -1,6 +1,6 @@
 <section class="listing">
     <div class="image-container">
-        <div class="discount">
+        <div class="discount" *ngIf="materialHoney.desc !==0">
             <p>DTO {{ materialHoney.desc }} %</p>
         </div>
         <img class="listing-photo animated-img" 
