--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -17,10 +17,10 @@
 
             <p class="listing-location">{{housingLocation?.city}}</p>
             
-            <div class="form-inline">
+            <div class="form-inline-select">
               <label for="weightSelector">Peso: </label>
               <div class="custom-select-wrapper">
-                <select id="weightSelector" [(ngModel)]="selectedWeight" class="form-control custom-select">
+                <select id="weightSelector" [(ngModel)]="selectedWeight" class="custom-select">
                   
                   <option value="1000">1000g</option>
                   <option value="500">500g</option>
