--- a/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
+++ b/src/app/functionalities/static-text/blog-herbal-honey/benefit-herbal-honey/benefit-herbal-honey.component.html
@@ -2,7 +2,18 @@
     [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
 
     <div class="">
-        <h3 class="title">{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h3>
+        
+        <div class="title_Bloque">
+
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+
+            <h6 class="title">{{'BenificesHerbalHoney.TitleBenifit'| translate}}</h6>
+        </div>
         <h3>{{'BenificesHerbalHoney.DescriptionBenifit'| translate}}</h3>
         <ul class="listStyle">
             <li>{{'BenificesHerbalHoney.Benifit1'| translate}}</li>
