la uatenticacion sera con el name y password

--- a/src/app/account/auth-admin/auth-admin.component.html
+++ b/src/app/account/auth-admin/auth-admin.component.html
@@ -9,8 +9,8 @@
         <span>Username</span>
       </label> -->
             <label>
-                <input class="input" type="email" id="email" formControlName="email" placeholder="" required="">
-                <span>email</span>
+                <input class="input" type="name" id="name" formControlName="name" placeholder="" required="">
+                <span>name</span>
             </label>
             <label>
                 <input class="input" type="password" id="password" formControlName="password" placeholder=""
