--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -15,7 +15,7 @@
     <h1 class="title">{{'Honeys'|translate}}</h1>
   </div>
   <section>
-    <app-stock-honey *ngFor="let housingLocation of housingLocationList" [housingLocation]="housingLocation">
+    <app-stock-honey>
     </app-stock-honey>
   </section>
 
@@ -29,9 +29,9 @@
     </div>
     <h1 class="title">{{'Material.Title'|translate}}</h1>
   </div>
-  <section>
+  <!-- <section>
     <app-stock-material></app-stock-material>
-  </section>
+  </section> -->
 
 
 
